# node-based-image-processor

./: CMakeLists.txt  MainWindow.cpp  README.md  main.cpp
build2/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  NodeBasedImageProcessor.sln  NodeBasedImageProcessor.vcxproj  NodeBasedImageProcessor.vcxproj.filters  TestOpenCV.sln  TestOpenCV.vcxproj
build2/.cmake/api/v1/reply/: codemodel-v2-bbf4a2e06e9167789814.json  index-2025-04-10T18-45-31-0505.json  target-ALL_BUILD-Debug-4fb90b160629295993fe.json  target-NodeBasedImageProcessor-Debug-f03cffe5a5b9db12178a.json  target-NodeBasedImageProcessor-MinSizeRel-a91fbb5ff814e3836b43.json  target-NodeBasedImageProcessor-Release-6a26cf0761aa3b3775cf.json  target-ZERO_CHECK-RelWithDebInfo-c7c08b7d2de34999f8b7.json
build2/Desktop_Qt_6_9_0_MinGW_64_bit-Debug/: CMakeCache.txt
build2/NodeBasedImageProcessor.dir/Debug/: NodeBasedImageProcessor.exe.recipe  NodeBasedImageProcessor.ilk
build2/NodeBasedImageProcessor.dir/Debug/NodeBase.455A3DA4.tlog/: Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build2/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
build2/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.write.1.tlog
build2/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.write.1.tlog
include/:  ImageInputNode.hpp  BlurNode.hpp  BrightnessContrastNode.hpp  ColorChannelSplitterNode.hpp  ImageInputNode.hpp  MainWindow.hpp  Node.hpp  OutputNode.hpp  ThresholdNode.hpp
opencv/data/haarcascades/: haarcascade_license_plate_rus_16stages.xml
opencv/data/haarcascades_cuda/: haarcascade_smile.xml
opencv/data/lbpcascades/: lbpcascade_frontalface.xml  lbpcascade_frontalface_improved.xml  lbpcascade_profileface.xml  lbpcascade_silverware.xml
opencv/modules/features2d/doc/: run_agast_tables.bat
opencv/samples/: _winpack_build_sample.cmd  _winpack_run_python_sample.cmd
opencv/samples/android/camera-calibration/res/layout/: camera_calibration_surface_view.xml
opencv/samples/android/camera-calibration/res/menu/: calibration.xml
opencv/samples/android/camera-calibration/res/values/: strings.xml
opencv/samples/android/tutorial-4-opencl/res/layout/: activity.xml
opencv/samples/android/tutorial-4-opencl/res/values/: strings.xml
opencv/samples/data/aruco/: tutorial_camera_charuco.yml
opencv/samples/python/: _run_winpack_demo.cmd
opencv/samples/winrt/FaceDetection/: FaceDetection.sln
opencv/samples/winrt/FaceDetection/FaceDetection/: FaceDetection.vcxproj
opencv/samples/winrt/ImageManipulations/: MediaCapture.sln  MediaCapture.vcxproj
opencv/samples/winrt/ImageManipulations/MediaExtensions/OcvTransform/: OcvTransform.vcxproj
opencv/samples/winrt/JavaScript/: MediaCaptureJavaScript.sln
opencv/samples/winrt/OcvImageProcessing/: OcvImageProcessing.sln
opencv/samples/winrt/OcvImageProcessing/OcvImageProcessing/: OcvImageProcessing.vcxproj
opencv/samples/winrt_universal/PhoneTutorial/: PhoneTutorial.sln  PhoneTutorial.vcxproj
opencv/samples/winrt_universal/VideoCaptureXAML/: VideoCaptureXAML.sln
opencv/samples/winrt_universal/VideoCaptureXAML/video_capture_xaml/video_capture_xaml.Windows/: video_capture_xaml.Windows.vcxproj
opencv/samples/winrt_universal/VideoCaptureXAML/video_capture_xaml/video_capture_xaml.WindowsPhone/: video_capture_xaml.WindowsPhone.vcxproj
opencv/samples/wp8/OcvImageManipulation/: ImageManipulation.sln
opencv/samples/wp8/OcvRotatingCube/: OcvRotatingCube.sln
opencv/samples/wp8/OpenCVXaml/: OpenCVXaml.sln
opencv/samples/wp8/OpenCVXaml/OpenCVComponent/: OpenCVComponent.vcxproj
opencv/samples/wp8/OpenCVXaml/OpenCVXaml/Properties/: AppManifest.xml  WMAppManifest.xml
src/: BrightnessContrastNode.cpp  ColorChannelSplitterNode.cpp  ImageInputNode.cpp  Node.cpp  OutputNode.cpp  main.cpp
(+4 files in other folders)
